# aoe2-color-tool

./: .gitmodules  AoE2DE Custom Colors.jucer  CMakeLists.txt  README.md
Assets/: UIColors.json  info.json  playercolor_red.pal  spritecolors.json
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
src/: .clang-format  ColourButton.cpp  ColourButton.h  ColourModder.cpp  ColourModder.h  HealthBarPage.cpp  HealthBarPage.h  Main.cpp  MainComponent.cpp  MainComponent.h
